submission logic near complete

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
     2px 4px 20px hsla(0, 0%, 0%, 0.2);
 }
 
-/* -------------------------- APP CUSTOM STYLES -------------------------- */
+/* #-------------------------- APP CUSTOM STYLES -------------------------- */
 /* Heres some pre-made styling you can add you your elements to save some
 time on styling. Youll have to think about the structure of your html and
 add the given classes to the correct elements. Most elements will need parent
