--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,14 @@ h2 {
   padding: 0.25rem 0;
 }
 
+ h2.title {
+   font-size: 70px;
+   font-family: monospace;
+ }
+
+ h3.title {
+  font-style: oblique;
+ }
 /** Class for the container that wraps your input and button for adding a joke. */
 .joke-add-form {
   display: flex;
@@ -111,6 +119,7 @@ h2 {
     background: white;
     color: var(--col-5);
     border: 2px solid var(--col-5);
+    cursor: pointer;
   }
 
   /** Adds styling for when the user hovers over the button*/
