Steve added, messed with styles

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,24 @@ these styles and create your own styles and layout for the application.
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-
+  .app-heading-circle {
+    background: var(--col-2);
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 4rem;
+    box-shadow: 2px 4px 10px hsla(0, 0%, 0%, 0.3),
+      2px 4px 20px hsla(0, 0%, 0%, 0.2);
+  
+    .app-logo {
+      width: 5rem;
+      filter: drop-shadow(1px 1px 11px var(--col-0));
+    }
+  }
   /** Class for the text for the heading. It should be added to an h1 inside of the div with the .app-heading class*/
   .app-heading-text {
     font-size: 2.5rem;
@@ -90,7 +107,10 @@ h2 {
  }
 
  h3.title {
-  font-style: oblique;
+  font-style: inset;
+  font-size: large;
+  margin-bottom: 10px;
+  text-decoration: underline;
  }
 /** Class for the container that wraps your input and button for adding a joke. */
 .joke-add-form {
